# LiDAR_Interface

./: README.md  test.txt
reader2.0/: CMakeLists.txt  README.md  build.sh  lidar_visualizer.cpp  main.cpp  msop_parser.cpp  msop_parser.h  test_angle_calculation.cpp
slam_lidar_cpp/: CMakeLists.txt  lidar_plotter.cpp
slam_lidar_cpp/src/: data_type.h  dump_msop.cpp  dump_packets.cpp  lakibeam_reader.cpp  lidar_reader.cpp  lidar_reader.hpp  main.cpp  msop_parser.cpp  msop_parser.hpp  read_packets.cpp  test_full_scan.cpp
